WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256313
Fix list of supported font-formats at parse time
https://bugs.webkit.org/show_bug.cgi?id=256313
Summary
Fix list of supported font-formats at parse time
Tim Nguyen (:ntim)
Reported
2023-05-04 09:39:24 PDT
This affects @font-face format() parsing and @supports font-format() evaluation.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-04 09:39:43 PDT
<
rdar://problem/108897052
>
Tim Nguyen (:ntim)
Comment 2
2023-05-04 09:40:02 PDT
We should ideally match `FontCustomPlatformData::supportsFormat`
Vitor Roriz
Comment 3
2023-05-05 13:12:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13513
EWS
Comment 4
2023-05-10 11:02:15 PDT
Committed
263914@main
(0a0261e666d9): <
https://commits.webkit.org/263914@main
> Reviewed commits have been landed. Closing PR #13513 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug