Cherry-pick 0a0261e666d9. rdar://problem/108897052

Fix list of supported font-formats at parse time (256313)
    https://bugs.webkit.org/show_bug.cgi?id=256313
    rdar://108897052

    Reviewed by Myles C. Maxfield.

    We are now rejecting unsupported formats at parsing time.
    We are also moving the code fragment that parses the font-format to
    its own function, so it can be used by both @font-face src and @supports
    parsers.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-fonts/parsing/font-face-src-format-expected.txt:
    * Source/WebCore/css/CSSFontFaceSrcValue.cpp:
    (WebCore::CSSFontFaceSrcResourceValue::fontLoadRequest):
    * Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
    (WebCore::CSSPropertyParserHelpers::consumeFontFormat):
    (WebCore::CSSPropertyParserHelpers::identMatchesSupportedFontFormat): Deleted.
    * Source/WebCore/css/parser/CSSPropertyParserHelpers.h:
    * Source/WebCore/css/parser/CSSPropertyParserWorkerSafe.cpp:
    (WebCore::CSSPropertyParserHelpersWorkerSafe::consumeFontFaceSrcURI):
    * Source/WebCore/css/parser/CSSSupportsParser.cpp:
    (WebCore::CSSSupportsParser::consumeSupportsFontFormatFunction):
    * Source/WebCore/platform/graphics/coretext/FontCustomPlatformDataCoreText.cpp:
    (WebCore::FontCustomPlatformData::supportsFormat):
    * Source/WebCore/platform/graphics/freetype/FontCustomPlatformDataFreeType.cpp:
    (WebCore::FontCustomPlatformData::supportsFormat):
    * Source/WebCore/platform/graphics/win/FontCustomPlatformDataWin.cpp:
    (WebCore::FontCustomPlatformData::supportsFormat):

    Canonical link: https://commits.webkit.org/263914@main

Identifier: 263769.21@safari-7616.1.14-branch